--- a/templates/showBook.html
+++ b/templates/showBook.html
@@ -28,7 +28,7 @@
 		<div class="input-group mb-3  ">
 			<div class="input-group-prepend">
 				<span class="input-group-text">Картинка</span> <img
-					src="/Internship/misc/images/no_image.png"
+					src="/misc/images/no_image.png"
 					style="width: 248px; height: 350px" alt="icon">				
 			</div>
 		</div>
