--- a/templates/header.html
+++ b/templates/header.html
@@ -22,7 +22,7 @@
 <body>
 	<nav class="navbar navbar-expand-sm rounded border shadow-sm">
 		<a class="navbar-brand" href="/">
-			<img src="/Internship/misc/images/logo.png" width="50"> 
+			<img src="/misc/images/logo.png" width="50"> 
 		</a>
 
 		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
