--- a/templates/admin/editBook.html
+++ b/templates/admin/editBook.html
@@ -14,12 +14,12 @@
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js">
 </script>
-<link rel="stylesheet" href="/Internship/misc/css/addBookStyle.css">
-<link rel="stylesheet" href="/Internship/misc/css/mainStyle.css">	
+<link rel="stylesheet" href="/misc/css/addBookStyle.css">
+<link rel="stylesheet" href="/misc/css/mainStyle.css">	
 </head>
 <div class="container">
 	<h1>Изменить книгу</h1>
-	<img src="/Internship/misc/images/no_image.png" style="width: 248px; height: 350px" alt="icon">
+	<img src="/misc/images/no_image.png" style="width: 248px; height: 350px" alt="icon">
 	<form class="mt-3" name="editBook" action="editBook" method="post">
 		<div class="form-group">
 			<label for="name">Название книги</label> <input type="text"
