--- a/templates/admin/addBook.html
+++ b/templates/admin/addBook.html
@@ -14,8 +14,8 @@
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js">
 </script>
-<link rel="stylesheet" href="/Internship/misc/css/addBookStyle.css">
-<link rel="stylesheet" href="/Internship/misc/css/mainStyle.css">	
+<link rel="stylesheet" href="/misc/css/addBookStyle.css">
+<link rel="stylesheet" href="/misc/css/mainStyle.css">	
 </head>
 <body>
 	<div class="container">
