--- a/templates/listBooks.html
+++ b/templates/listBooks.html
@@ -57,19 +57,19 @@
 		<div class="shadow card w-25 m-3 justify-content-between" >
 			<div class="card-header" >book.name 1</div>
 			<a href="/books/show/+book.id"><img class="card-img"
-				src="/Internship/misc/images/no_image.png" alt="book image"></a>
+				src="/misc/images/no_image.png" alt="book image"></a>
 			<div class="card-footer">book.price 1</div>		
 		</div>
 		<div class="shadow card w-25 m-3 justify-content-between" >
 			<div class="card-header" >book.name 2</div>
 			<a href="/books/show/+book.id"><img class="card-img"
-				src="/Internship/misc/images/no_image.png" alt="book image"></a>
+				src="/misc/images/no_image.png" alt="book image"></a>
 			<div class="card-footer">book.price 2</div>		
 		</div>
 		<div class="shadow card w-25 m-3 justify-content-between" >
 			<div class="card-header" >book.name 3</div>
 			<a href="/books/show/+book.id"><img class="card-img"
-				src="/Internship/misc/images/no_image.png" alt="book image"></a>
+				src="/misc/images/no_image.png" alt="book image"></a>
 			<div class="card-footer">book.price 3</div>		
 		</div>
 	</div>
